# backendFastapi

./: .env.example  .gitignore  .gitmodules  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  grpc_server.py  main.py
app/auth/: deps.py
app/common/: errors.py  json_utils.py
app/news/: business_news_service.py  embedder.py  gemini_adapter.py  groq_adapter.py  grpc_servicer.py  hybrid_service.py  kafka_consumer.py  kafka_producer.py  llm_news_service.py  models.py  qdrant_service.py  repository.py  reranker.py  routes.py  schemas.py
app/user_calendar/: gemini_advisor.py  google_oauth.py  groq_advisor.py  grpc_servicer.py  kafka_consumer.py  models.py  repository.py  routes.py  schemas.py
tests/: conftest.py  test_grpc_vulnerabilities_red.py
tests/news/: test_chatstream_integration.py  test_edge_cases.py  test_groq_adapter_stream.py  test_grpc_servicer_async.py  test_kafka_consumer_atomicity_red.py  test_routes_async.py
tests/user_calendar/: conftest.py  test_user_activities_consumer_red.py
