[project]
name = "hackonomics-ai-service"
version = "0.1.0"
description = "Hackonomics AI/ML microservice — news RAG, calendar advisor, Groq API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "groq>=0.9.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "google-auth-oauthlib>=1.2.0",
    "babel>=2.15.0",
    # gRPC server
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "betterproto>=2.0.0b6",
    # Kafka consumer/producer
    "aiokafka>=0.11.0",
    # Redis cache
    "redis[asyncio]>=5.0.0",
    # DB migrations
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "grpcio-testing>=1.62.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
